fix(ButtonGroup): Add `width: 100%` for overflow handling

--- a/src/button/button-group.scss
+++ b/src/button/button-group.scss
@@ -106,3 +106,8 @@
     }
   }
 }
+
+@mixin iui-button-group-overflow-x {
+  max-width: revert;
+  width: 100%;
+}
